// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account renders correctly 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "paddingBottom": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
              "padding": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Object {
                    "backgroundColor": "#7AD6FE",
                    "borderRadius": 27.5,
                    "height": 55,
                    "width": 55,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Hind-Medium",
                      "fontSize": 16,
                    },
                    Object {
                      "fontSize": 27.5,
                    },
                  ]
                }
              >
                J
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "bottom": 5,
                "position": "absolute",
                "right": 5,
                "zIndex": 10,
              }
            }
          >
            <svg
              fill="none"
              height={21}
              style={Object {}}
              viewBox="0 0 21 21"
              width={21}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="white"
                height={21}
                rx="1"
                style={Object {}}
                width={21}
              />
              <rect
                height="6.6"
                stroke="#42D689"
                style={Object {}}
                width="6.6"
                x="2.5"
                y="11.9"
              />
              <rect
                fill="#42D689"
                height="3.8"
                style={Object {}}
                width="3.8"
                x="3.89999"
                y="13.3"
              />
              <rect
                height="6.6"
                stroke="#42D689"
                style={Object {}}
                width="6.6"
                x="2.5"
                y="2.5"
              />
              <rect
                fill="#42D689"
                height="3.8"
                style={Object {}}
                width="3.8"
                x="3.89999"
                y="3.90002"
              />
              <rect
                height="6.6"
                stroke="#42D689"
                style={Object {}}
                width="6.6"
                x="11.5"
                y="2.5"
              />
              <rect
                fill="#42D689"
                height="3.8"
                style={Object {}}
                width="3.8"
                x="12.9"
                y="3.90002"
              />
              <path
                d="M18.3073 13.1485C17.9542 12.4166 17.3262 11.8611 16.5418 11.584C15.7562 11.3079 14.9066 11.3434 14.1483 11.6847C13.3995 12.0226 12.8295 12.6182 12.5404 13.365C11.1683 14.1472 10.6067 15.8274 11.2927 17.2511C11.6458 17.983 12.2738 18.5385 13.0594 18.8156C13.4089 18.9382 13.7703 19 14.1317 19C14.582 19 15.0322 18.905 15.4529 18.7148C16.2017 18.3758 16.7705 17.7802 17.0596 17.0335C18.4317 16.2524 18.9933 14.5721 18.3073 13.1485ZM14.473 12.3605C14.7905 12.2173 15.1294 12.1452 15.4695 12.1452C15.742 12.1452 16.0145 12.191 16.2787 12.2838C16.8712 12.4922 17.344 12.9114 17.6106 13.4635C17.8772 14.0155 17.9056 14.6351 17.6899 15.2078C17.5916 15.4701 17.4447 15.7072 17.2622 15.9133C17.2539 15.4964 17.1567 15.083 16.9683 14.6935C16.3664 13.4451 14.9896 12.7808 13.6471 12.9836C13.8663 12.7213 14.1459 12.5071 14.473 12.3605ZM13.1779 13.8861C14.3486 13.3867 15.7254 13.8815 16.2693 15.0074C16.4991 15.4838 16.5501 16.0095 16.4221 16.5135C15.8617 16.7529 15.2396 16.7746 14.6626 16.5719C14.0701 16.3635 13.5973 15.9443 13.3307 15.3922C13.1009 14.9157 13.0499 14.3889 13.1779 13.8861ZM15.127 18.0391C14.5559 18.2968 13.9149 18.3243 13.3224 18.1158C12.73 17.9074 12.2572 17.4882 11.9906 16.9361C11.724 16.3841 11.6956 15.7644 11.9112 15.1918C12.0096 14.9295 12.1565 14.6924 12.339 14.4862C12.3473 14.9031 12.4444 15.3166 12.6328 15.706C13.1637 16.8056 14.2952 17.4527 15.4742 17.4527C15.6342 17.4527 15.7941 17.4401 15.9541 17.416C15.7325 17.6783 15.4541 17.8925 15.127 18.0391Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Object {
                  "height": 15,
                  "width": 15,
                },
                Object {
                  "bottom": 25,
                  "position": "absolute",
                  "right": -15,
                  "zIndex": 20,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3C9BF4",
                  "borderRadius": 2.5,
                  "height": 5,
                  "opacity": 1,
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                    Object {
                      "perspective": 1000,
                    },
                  ],
                  "width": 5,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#3C9BF4",
                  "borderRadius": 2.5,
                  "height": 5,
                  "position": "absolute",
                  "width": 5,
                }
              }
            />
          </View>
        </View>
        <Text
          onPress={[Function]}
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-SemiBold",
                "fontSize": 14,
                "lineHeight": 18,
              },
              Object {
                "paddingTop": 10,
              },
            ]
          }
          suppressHighlighting={true}
        >
          John Doe
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Light",
                  "fontSize": 14,
                  "textAlignVertical": "center",
                },
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 3,
                  "justifyContent": "center",
                  "marginRight": 5,
                  "paddingLeft": 6,
                  "paddingRight": 3,
                },
              ]
            }
          >
             +1
          </Text>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 14,
                "textAlignVertical": "center",
              }
            }
          >
            (415) 555-6666
          </Text>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 14,
                "lineHeight": 18,
                "marginTop": 8,
              }
            }
          >
            0x0000000000000000000000000000000000007E57
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 7,
            "left": 7,
            "right": 7,
            "top": 7,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "#42D689",
            "borderRadius": 2,
            "borderWidth": 2,
            "marginTop": 10,
            "minWidth": 160,
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
            "textAlign": "center",
          }
        }
        testID="editProfileButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#81868B",
                "fontFamily": "Hind-SemiBold",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "lineHeight": 20,
              },
              Object {
                "color": "#42D689",
              },
              undefined,
            ]
          }
        >
          editProfile
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#EEEEEE",
          "borderTopWidth": 1,
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              backupKey
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              invite
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              analytics
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              languageSettings
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              licenses
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              sendIssueReport
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "marginTop": 30,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Test FAQ is 
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                  },
                ],
              ]
            }
          >
            here
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Terms of service are 
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                  },
                ],
              ]
            }
          >
            here
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Account when dev mode active renders correctly 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "paddingBottom": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
              "padding": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Object {
                    "backgroundColor": "#7AD6FE",
                    "borderRadius": 27.5,
                    "height": 55,
                    "width": 55,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Hind-Medium",
                      "fontSize": 16,
                    },
                    Object {
                      "fontSize": 27.5,
                    },
                  ]
                }
              >
                J
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "bottom": 5,
                "position": "absolute",
                "right": 5,
                "zIndex": 10,
              }
            }
          >
            <svg
              fill="none"
              height={21}
              style={Object {}}
              viewBox="0 0 21 21"
              width={21}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="white"
                height={21}
                rx="1"
                style={Object {}}
                width={21}
              />
              <rect
                height="6.6"
                stroke="#42D689"
                style={Object {}}
                width="6.6"
                x="2.5"
                y="11.9"
              />
              <rect
                fill="#42D689"
                height="3.8"
                style={Object {}}
                width="3.8"
                x="3.89999"
                y="13.3"
              />
              <rect
                height="6.6"
                stroke="#42D689"
                style={Object {}}
                width="6.6"
                x="2.5"
                y="2.5"
              />
              <rect
                fill="#42D689"
                height="3.8"
                style={Object {}}
                width="3.8"
                x="3.89999"
                y="3.90002"
              />
              <rect
                height="6.6"
                stroke="#42D689"
                style={Object {}}
                width="6.6"
                x="11.5"
                y="2.5"
              />
              <rect
                fill="#42D689"
                height="3.8"
                style={Object {}}
                width="3.8"
                x="12.9"
                y="3.90002"
              />
              <path
                d="M18.3073 13.1485C17.9542 12.4166 17.3262 11.8611 16.5418 11.584C15.7562 11.3079 14.9066 11.3434 14.1483 11.6847C13.3995 12.0226 12.8295 12.6182 12.5404 13.365C11.1683 14.1472 10.6067 15.8274 11.2927 17.2511C11.6458 17.983 12.2738 18.5385 13.0594 18.8156C13.4089 18.9382 13.7703 19 14.1317 19C14.582 19 15.0322 18.905 15.4529 18.7148C16.2017 18.3758 16.7705 17.7802 17.0596 17.0335C18.4317 16.2524 18.9933 14.5721 18.3073 13.1485ZM14.473 12.3605C14.7905 12.2173 15.1294 12.1452 15.4695 12.1452C15.742 12.1452 16.0145 12.191 16.2787 12.2838C16.8712 12.4922 17.344 12.9114 17.6106 13.4635C17.8772 14.0155 17.9056 14.6351 17.6899 15.2078C17.5916 15.4701 17.4447 15.7072 17.2622 15.9133C17.2539 15.4964 17.1567 15.083 16.9683 14.6935C16.3664 13.4451 14.9896 12.7808 13.6471 12.9836C13.8663 12.7213 14.1459 12.5071 14.473 12.3605ZM13.1779 13.8861C14.3486 13.3867 15.7254 13.8815 16.2693 15.0074C16.4991 15.4838 16.5501 16.0095 16.4221 16.5135C15.8617 16.7529 15.2396 16.7746 14.6626 16.5719C14.0701 16.3635 13.5973 15.9443 13.3307 15.3922C13.1009 14.9157 13.0499 14.3889 13.1779 13.8861ZM15.127 18.0391C14.5559 18.2968 13.9149 18.3243 13.3224 18.1158C12.73 17.9074 12.2572 17.4882 11.9906 16.9361C11.724 16.3841 11.6956 15.7644 11.9112 15.1918C12.0096 14.9295 12.1565 14.6924 12.339 14.4862C12.3473 14.9031 12.4444 15.3166 12.6328 15.706C13.1637 16.8056 14.2952 17.4527 15.4742 17.4527C15.6342 17.4527 15.7941 17.4401 15.9541 17.416C15.7325 17.6783 15.4541 17.8925 15.127 18.0391Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Object {
                  "height": 15,
                  "width": 15,
                },
                Object {
                  "bottom": 25,
                  "position": "absolute",
                  "right": -15,
                  "zIndex": 20,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3C9BF4",
                  "borderRadius": 2.5,
                  "height": 5,
                  "opacity": 1,
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                    Object {
                      "perspective": 1000,
                    },
                  ],
                  "width": 5,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#3C9BF4",
                  "borderRadius": 2.5,
                  "height": 5,
                  "position": "absolute",
                  "width": 5,
                }
              }
            />
          </View>
        </View>
        <Text
          onPress={[Function]}
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-SemiBold",
                "fontSize": 14,
                "lineHeight": 18,
              },
              Object {
                "paddingTop": 10,
              },
            ]
          }
          suppressHighlighting={true}
        >
          John Doe
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Light",
                  "fontSize": 14,
                  "textAlignVertical": "center",
                },
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 3,
                  "justifyContent": "center",
                  "marginRight": 5,
                  "paddingLeft": 6,
                  "paddingRight": 3,
                },
              ]
            }
          >
             +1
          </Text>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 14,
                "textAlignVertical": "center",
              }
            }
          >
            (415) 555-6666
          </Text>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 14,
                "lineHeight": 18,
                "marginTop": 8,
              }
            }
          >
            0x0000000000000000000000000000000000007E57
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 7,
            "left": 7,
            "right": 7,
            "top": 7,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderColor": "#42D689",
            "borderRadius": 2,
            "borderWidth": 2,
            "marginTop": 10,
            "minWidth": 160,
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
            "textAlign": "center",
          }
        }
        testID="editProfileButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#81868B",
                "fontFamily": "Hind-SemiBold",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "lineHeight": 20,
              },
              Object {
                "color": "#42D689",
              },
              undefined,
            ]
          }
        >
          editProfile
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#EEEEEE",
          "borderTopWidth": 1,
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              backupKey
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              invite
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              analytics
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              languageSettings
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              licenses
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              sendIssueReport
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "marginHorizontal": 10,
          "padding": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <Text>
          Dev Settings
        </Text>
        <View>
          <Text>
            Checking Verification
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text>
            Revoke Number Verification
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text>
            Reset app opened state
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text>
            Show Debug Screen
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text>
            Trigger a crash
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "marginTop": 30,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Test FAQ is 
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                  },
                ],
              ]
            }
          >
            here
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Terms of service are 
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                  },
                ],
              ]
            }
          >
            here
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
